# brian_hw

./: .gitignore  .ragconfig.template  AGENTS.md  CLAUDE.md  CONTEXT_FEATURE_SUMMARY.md  README.md  SLASH_COMMANDS_REPORT.md  SUBAGENT_CONTEXT_ARCHITECTURE.md  VERILOG_REPOSITORY_SUMMARY.md  WORK_SUMMARY.md  atlas.db  axi_read_gen.v  axi_write_gen.v  check_server_paths.py  claude.md  cmd_output_1779005559.txt  config.py  conversation_history.json  convert_open_skill.py  count_messages.py  counter.v  debug_expansion_filtered.py  debug_graph_acronyms.py  dma_spec.md  example.txt  full_conversation.json  new_todo.md  opencode_integration_proposal.md  pcie_axi_to_sram.v  pcie_msg_receiver.v  pcie_system_tb.v  planforclaudecode.txt  planforclaudecode.txt_v2  rebuild_rag.py  rebuild_rag_openai.py  rebuild_rag_pcie.py  run_sim.sh  sim  sram.v  tb_counter.v  (+26 more)
.brian_rag/: .ragconfig
.omc/: project-memory.json
COUNTER/: .gitignore  .pre-commit-config.yaml  cocotb_architecture.md  cocotb_implementation_plan.md  cocotb_requirements.md  cocotb_stimulus_coverage.md  dma_512_update_plan.md  dma_enhancement_notes.md  dma_requirements.md  report.md
DMA/: dma330_spec.md  simv
GOOD/: dma.spec  sim_output.txt  sim_output2.txt
MD_FILES/: 13화. 기술트렌드 & 기업 밸류에이션 네트워크 특집 AI 경쟁의 다음 라운드, 이미 시작됐.md  57화. 실종된 산타..? 26년 주목해야할 3가지 변수 정리해봤습니다.md  AUTOCOMPLETE_SETUP.md  claude.md  (+59 more)
common_ai_agent/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
common_ai_agent/src-tauri/capabilities/: default.json
common_ai_agent/src-tauri/icons/: icon.icns
common_ai_agent/src-tauri/src/: main.rs
(+15138 files in other folders)
