[package]
name = "atlas-desktop"
version = "0.1.0"
description = "ATLAS desktop shell"
authors = ["ATLAS"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# default features kept empty; mobile/custom-protocol features deferred
